--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@ body, html {
     margin: 0;
     padding: 0;
     height: 100%;
+    width: 100%;
+    background-color: #f0f0f0;  
 }
 
 .container {
@@ -31,11 +33,7 @@ body, html {
     color: white;
     font-weight: lighter;
 }
-.right {
-    flex: 2;
-    
-    padding: 20px;
-}
+
 
 a {
     color: white;
